# codecortex

./: .aiignore  .author  .coveragerc  .env.example  .env.mcp-test  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  SOUL.md  WORKING-CONTEXT.md  _tmp_translate.py  build.ps1  docker-compose.yml  k8s.yaml  marketplace.json  package.json  pyproject.toml  pytest.ini  run_stdio.bat  run_stdio.ps1  server_log.txt  stdio_wrapper.cjs  test_output.txt
.agents/: agents.md  persona.yaml  routing-table.yaml  state.yaml
.agents/contexts/: principal.md  project.md  working.md
.antigravity/: config.yaml  rules.yaml
.claude-plugin/: plugin.json
.cline/: .clinerules
.codex-plugin/: plugin.json
.config/: mcp_client_sse.json  mcp_client_stdio.json
.cursor-plugin/: plugin.json
.github/: copilot-instructions.md
.goose/: config.yaml  mcp.json
.opencode/: INSTALL.md  plugin.json
.qoder/: config.yaml  rules.md
.trae/: TRAEBACK_NPX_FIX.md  mcp_npx.json  project_rules.md  system_prompt.md  user_rules.md
docs/: README.md  SUMMARY.md  index.md
docs/plugins/: INDEX.md  (+20 more)
hooks/: hooks-cursor.json  run-hook.cmd  session-start
migrations/: 20260528_last_prefix_fix.sql  20260528_plural_columns_fix.sql  20260528_timestamp_standardization.sql  20260529_graph_cache_hash_and_undo_log.sql  20260529_graph_timeline.sql
outputs/: temp_output.txt  tree_output.json
relay/: __init__.py  main.py  models.py  storage.py
scratch/: check_call_tool.py  check_mcp.py  check_mcp_v3.py  inspect_mcp.py  migrate_db.py  test_report.py  verify_tracing.py
scripts/: _e2e_bridge.py  check_schema.py  check_tables.py  cli.py  cli_link.py  formatter.py  validate_state.py
src/: __init__.py  dummy_refactor.py  http_server.py  main.py
test_scaffold/: .aiignore  .author  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  principal.md  pyproject.toml  requirements.txt  test_unified_indexing_integration.py  verify_wiring.py
test_scaffold/.agents/contexts/: working.md
test_scaffold/.agents/states/: current.yaml
test_scaffold/.aicoders/rules/: architecture.md
test_scaffold/docs/: README.md
test_scaffold/docs/architecture/: ARCHITECTURE.md  SECURITY.md
test_scaffold/docs/features/myawesomeproject/: concept.md
test_scaffold/scripts/setup/: setup-dev-env.bat  setup-dev-env.ps1  setup-dev-env.sh
test_scaffold/src/: __init__.py  main.py
test_scaffold/src/api/: __init__.py
test_scaffold/src/api/dependencies/: __init__.py
test_scaffold/src/api/middlewares/: __init__.py
test_scaffold/src/api/schemas/: __init__.py
test_scaffold/src/api/v1/: __init__.py
test_scaffold/src/core/: __init__.py  config.py  logger.py
test_scaffold/src/domain/: __init__.py
test_scaffold/src/domain/entities/: __init__.py
test_scaffold/src/domain/repositories/: __init__.py
test_scaffold/src/domain/services/: __init__.py
test_scaffold/src/infrastructure/: __init__.py
test_scaffold/src/infrastructure/repositories/: __init__.py
test_scaffold/tests/unit/: test_main.py
tests/: test_all_tools_verbose.py  test_ast_cache.py  test_backends_real.py  test_cct_indexing.py  test_cli.py  test_codegraph_pipeline.py  test_community_leiden.py  test_core_managers.py  test_coverage_100.py  test_coverage_deep.py  test_coverage_edge_cases.py  test_database_cleanup.py  test_database_manager.py  test_edge_cases.py  test_embeddings.py  test_entry_point_scorer.py  test_filesystem_watcher.py  test_final_100.py  test_final_batch.py  test_final_coverage.py  test_flutter_test_adapter.py  test_framework_detection.py  test_frameworks_coverage.py  test_frameworks_deep.py  test_full_integration.py  test_git_ssh.py  test_glob_walker.py  test_go_test_adapter.py  test_heritage_extractor.py  test_import_resolvers.py  test_indexing_workflow.py  test_jest_adapter.py  test_knowledge_graph.py  test_language_parsers.py  test_main_modules.py  test_main_tools_more.py  test_mcp_index_tools.py  test_mcp_return.py  test_multi_repo.py  test_npm_adapter.py  (+24 more)
(+1127 files in other folders)
