[project]
name = "code-analysis-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "gitpython>=3.1.49",
    "httpx==0.28.1",
    "jinja2>=3.1.6",
    "mcp[cli]==1.27.0",
    "networkx>=3.6.1",
    "openpyxl>=3.1.5",
    "pathspec==1.1.1",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "python-louvain>=0.16",
    "requests>=2.33.1",
    "tree-sitter==0.25.2",
    "tree-sitter-python==0.25.0",
    "tree-sitter-typescript==0.23.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio>=0.25.3",
    "coverage==7.13.5",
]
notebooks = [
    "nbformat==5.10.4",
    "nbconvert==7.17.1",
]
server = [
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "python-dotenv==1.2.2",
]
